--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
   app:
     build:
       context: .
+      args:
+        - DEV=true
     ports:
-      - "8000:8000"
+      - "8080:8080"
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8080"
