--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,32 @@ services:
       args:
         - DEV=true
     ports:
-      - "8080:8000"
+      - "8080:8080"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8080"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8080"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=changeme
+      - DEBUG=1
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
+
+volumes:
+  dev-db-data:
+  dev-static-data:
